@@ -1,6 +1,16 @@
 2007-02-26  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/producers/asfparse.py:
+	  Comment out a number of unused things we read from the bitstream to
+	  make pychecker quieter.
+	* flumotion/component/producers/wms.py:
+	* flumotion/component/producers/wms.xml:
+	  Porter support.
+	  Allow specifying port to listen on if not using the porter.
+
+2007-02-26  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/producers/asfparse.py:
 	* flumotion/component/producers/queue.py:
 	* flumotion/component/producers/wms.py:
 	  Prevent multiple connections to this component from interfering.
